# purview-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  claude-desktop-config.example.json  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
appPackage/: ai-plugin.json  declarativeAgent.json  manifest.json
src/purview_mcp/: __main__.py
src/purview_mcp/application/services/: scoring.py
src/purview_mcp/application/use_cases/: asset_search.py  find_authoritative_source.py  get_asset_details.py  get_asset_lineage.py  get_asset_owner.py  get_data_quality.py  search_assets.py  search_data_products.py  search_glossary_terms.py  search_undocumented_assets.py
src/purview_mcp/domain/: exceptions.py
src/purview_mcp/domain/models/: asset.py  data_product.py  glossary.py  lineage.py
src/purview_mcp/domain/ports/: catalog_port.py  governance_port.py  lineage_port.py
src/purview_mcp/infrastructure/: api_types.py  telemetry.py
src/purview_mcp/infrastructure/auth/: azure_credential.py  inbound_auth.py
src/purview_mcp/infrastructure/clients/: base_client.py  datamap_client.py  (+1 more)
src/purview_mcp/presentation/: container.py
tests/: conftest.py
tests/integration/: conftest.py  test_etl_load.py  test_integration_search.py  test_pg_repositories.py
tests/unit/application/: test_find_authoritative_source.py  test_scoring.py  test_search_assets.py  test_search_undocumented_assets.py
tests/unit/domain/: test_models.py
tests/unit/infrastructure/: test_base_client.py  test_catalog_repository.py  test_etl_extract.py  test_etl_scheduler.py  test_governance_repository.py  test_inbound_auth.py  test_lineage_repository.py
tests/unit/presentation/: test_container.py  test_health.py  test_rate_limit_middleware.py  test_tool_validation.py
(+27 files in other folders)
