[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purview-mcp-server"
version = "0.1.0"
description = "Microsoft Purview Unified Catalog MCP Server for Claude, Copilot, and Codex"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["mcp", "purview", "azure", "data-catalog", "ai"]
dependencies = [
    "mcp>=1.27.0",
    "httpx>=0.28.0",
    "azure-identity>=1.25.0",
    # azure.identity.aio requires azure-core's aiohttp-based async transport
    "aiohttp>=3.9.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.0.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "PyJWT>=2.8.0",
    "uvicorn>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]

[project.scripts]
purview-mcp = "purview_mcp.__main__:run"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
    "testcontainers[postgresql]>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/purview_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["purview_mcp"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
